app/assets/stylesheets/components/alerts_icon.scss
@import "govuk/settings/all";
@import "govuk/helpers/all";

.alerts-icon {
  position: absolute;
  left: 0;

  &--48 {
    top: -3px;
    width: 32px;

    @include govuk-media-query($from: tablet) {
      top: 5px;
      width: 48px;
    }
  }
}

.alerts-icon__container {
  position: relative;

  &--48 {
    padding-left: 48px;
    min-height: 32px;

    @include govuk-media-query($from: tablet) {
      padding-left: 72px;
      min-height: 48px;
    }
  }
}

// Page-specific variants
.govuk-heading-xl > .alerts-icon--48 {
  top: -10px;

  @include govuk-media-query($from: tablet) {
    top: -2px;
  }
}

.govuk-heading-xl.alerts-icon__container--48 {
  padding-left: 42px;

  @include govuk-media-query($from: tablet) {
    padding-left: 62px;
  }
}

